--- a/github/forkworkflows/tag.yml
+++ b/github/forkworkflows/tag.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           name: Artifacts
           path: |
-$autoworkflowfiles$
+$githubautoworkflowfiles$
 <autopublish>
 <publishForge>
       - name: Publish-Forge-Curseforge
