--- a/github/forkworkflows/tag.yml
+++ b/github/forkworkflows/tag.yml
@@ -42,6 +42,10 @@ $githubautoworkflowfiles$
           curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}  
 </curseforge>
           loaders: forge
+          game-versions: |
+            1.19
+            1.19.1
+            1.19.2
           name: ${{github.ref_name}} - Forge
           version-type: beta
           files: 'workspace/*Forge/build/libs/!(*-@(dev|sources|javadoc|all)).jar'
@@ -53,6 +57,10 @@ $githubautoworkflowfiles$
           modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
 </modrinth>
           loaders: forge
+          game-versions: |
+            1.19
+            1.19.1
+            1.19.2
           name: ${{github.ref_name}} - Forge
           files: 'workspace/*Forge/build/libs/!(*-@(dev|sources|javadoc|all)).jar'
 </publishForge>
@@ -69,6 +77,10 @@ $githubautoworkflowfiles$
           curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}  
 </curseforge>
           loaders: fabric
+          game-versions: |
+            1.19
+            1.19.1
+            1.19.2
           name: ${{github.ref_name}} - Fabric
           files: 'workspace/*Fabric/build/libs/!(*-@(dev|sources|javadoc|all)).jar'
 </publishFabric>
