--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 subprojects {
+	apply plugin: 'eclipse'
 	apply plugin: "dev.architectury.loom"
 	//apply plugin: "fabric-loom"
 	apply plugin: 'com.github.johnrengelman.shadow'
