Add Unit test output

--- a/github/workflows/build.yml
+++ b/github/workflows/build.yml
@@ -27,3 +27,11 @@ jobs:
           name: Artifacts
           path: |
 $autoworkflowfiles$
+
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: JUnit Tests
+          path: '**/build/test-results/test/TEST-*.xml'
+          reporter: java-junit        
