--- a/github/forkworkflows/build.yml
+++ b/github/forkworkflows/build.yml
@@ -34,3 +34,11 @@ jobs:
           name: Artifacts
           path: |
 $githubautoworkflowfiles$
+
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: JUnit Tests
+          path: '**/build/test-results/test/TEST-*.xml'
+          reporter: java-junit        
