Update for 1.19.4-pre3

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Minecraft Properties
-minecraft_version       = 1.19.3
+minecraft_version       = 1.19.4-pre3
 fabric_loader_version   = 0.14.15
 forge_version           = 44.0.1
 
@@ -14,5 +14,5 @@ modid                   = $id$
 author                  = $author$
 
 # Dependencies
-fabric_api_version      = 0.68.1+1.19.3
-mod_menu_release        = 4100241
+fabric_api_version      = 0.75.2+1.19.4
+mod_menu_release        = 4401054
