--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Minecraft Properties
-minecraft_version       = 1.19.4-pre3
-fabric_loader_version   = 0.14.15
+minecraft_version       = 1.19.4-rc2
+fabric_loader_version   = 0.14.17
 forge_version           = 44.0.1
 
 # Mod Properties
@@ -14,5 +14,5 @@ modid                   = $id$
 author                  = $author$
 
 # Dependencies
-fabric_api_version      = 0.75.2+1.19.4
+fabric_api_version      = 0.75.3+1.19.4
 mod_menu_release        = 4401054
