Add the aperlambda repo

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ allprojects {
     	}
 		maven { url "https://repo.codemc.io/repository/maven-public/" }
         maven { url "https://repo.codemc.io/repository/maven-snapshots/" }
+		maven { url "https://aperlambda.github.io/maven" }
 	}
 
 	tasks.withType(JavaCompile) {
