Add accesswidener support

--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ subprojects {
 		mixin {
 			defaultRefmapName = "$id$.refmap.mixins.json"
 		}
+		<accesswidener>
+        accessWidenerPath = file("Shared/src/main/resources/$id$.accesswidener")
+		</accesswidener>
 	}
 
 	configurations {
