--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,7 @@ allprojects {
 		maven { url "https://repo.codemc.io/repository/maven-public/" }
         maven { url "https://repo.codemc.io/repository/maven-snapshots/" }
 		maven { url "https://aperlambda.github.io/maven" }
+		maven { url 'https://jitpack.io' }
 	}
 
 	tasks.withType(JavaCompile) {
