--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Minecraft Properties
-minecraft_version       = 1.19.4
-fabric_loader_version   = 0.14.17
+minecraft_version       = 1.20-pre1
+fabric_loader_version   = 0.14.19
 forge_version           = 45.0.4
 
 # Mod Properties
@@ -14,5 +14,5 @@ modid                   = $id$
 author                  = $author$
 
 # Dependencies
-fabric_api_version      = 0.75.3+1.19.4
-mod_menu_release        = 4401054
+fabric_api_version      = 0.80.2+1.20
+mod_menu_release        = iZRiOnnj
