--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -4,7 +4,7 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
     
-    modImplementation "maven.modrinth:modmenu:${rootProject.mod_menu_release}"
+    modCompileOnly "maven.modrinth:modmenu:${rootProject.mod_menu_release}"
 
     sourceSets.main.java.srcDirs += "${project.rootDir}/Shared/src/main/java"
 	sourceSets.main.resources.srcDirs += "${project.rootDir}/Shared/src/main/resources"
