--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Minecraft Properties
-minecraft_version       = 1.20-pre1
-fabric_loader_version   = 0.14.19
+minecraft_version       = 1.20-rc1
+fabric_loader_version   = 0.14.21
 forge_version           = 45.0.4
 
 # Mod Properties
@@ -14,5 +14,5 @@ modid                   = $id$
 author                  = $author$
 
 # Dependencies
-fabric_api_version      = 0.80.2+1.20
+fabric_api_version      = 0.83.0+1.20
 mod_menu_release        = iZRiOnnj
