Update to 1.20 full, forge still missing

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Minecraft Properties
-minecraft_version       = 1.20-rc1
+minecraft_version       = 1.20
 fabric_loader_version   = 0.14.21
 forge_version           = 45.0.4
 
@@ -15,4 +15,4 @@ author                  = $author$
 
 # Dependencies
 fabric_api_version      = 0.83.0+1.20
-mod_menu_release        = iZRiOnnj
+mod_menu_release        = M7LIgtWJ
