--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,10 @@ subprojects {
 
 	dependencies {
 		minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
-		mappings loom.officialMojangMappings()
+		mappings loom.layered() {
+			officialMojangMappings()
+			parchment("org.parchmentmc.data:parchment-1.19.4:2023.06.26@zip")
+		}
 
 		$dependencies$
 
@@ -76,6 +79,10 @@ allprojects {
         maven { url "https://repo.codemc.io/repository/maven-snapshots/" }
 		maven { url "https://aperlambda.github.io/maven" }
 		maven { url 'https://jitpack.io' }
+		maven {
+			name = 'ParchmentMC'
+			url = 'https://maven.parchmentmc.org'
+     	}
 	}
 
 	tasks.withType(JavaCompile) {
