--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ subprojects {
 		minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
 		mappings loom.layered() {
 			officialMojangMappings()
-			parchment("org.parchmentmc.data:parchment-1.20.1:2023.06.26@zip")
+			parchment("org.parchmentmc.data:parchment-${rootProject.parchment_mc_version}:${rootProject.parchment_version}@zip")
 		}
 
 		$dependencies$
