--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@ org.gradle.jvmargs=-Xmx2G
 minecraft_version       = 1.20.1
 fabric_loader_version   = 0.14.21
 forge_version           = 47.0.3
+parchment_mc_version    = 1.20.1
+parchment_version       = 2023.07.23
 
 # Mod Properties
 mod_version 			= $version$
