--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,11 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Minecraft Properties
-minecraft_version       = 1.20.1
-fabric_loader_version   = 0.14.21
+minecraft_version       = 1.20.2
+fabric_loader_version   = 0.14.22
 forge_version           = 47.1.66
 parchment_mc_version    = 1.20.1
-parchment_version       = 2023.08.20
+parchment_version       = 2023.09.03
 
 # Mod Properties
 mod_version 			= $version$
@@ -16,5 +16,5 @@ modid                   = $id$
 author                  = $author$
 
 # Dependencies
-fabric_api_version      = 0.83.1+1.20.1
-mod_menu_release        = M7LIgtWJ
+fabric_api_version      = 0.89.0+1.20.2
+mod_menu_release        = lEkperf6
