--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ author                  = $author$
 
 # Dependencies
 fabric_api_version      = 0.89.0+1.20.2
-mod_menu_release        = lEkperf6
+mod_menu_release        = sMAXpy0X
