--- a/NeoForged/build.gradle
+++ b/NeoForged/build.gradle
@@ -1,7 +1,7 @@
 archivesBaseName = rootProject.archives_base_name + "-forge"
 
 dependencies {
-    forge "net.minecraftforge:forge:${rootProject.minecraft_version}-${rootProject.forge_version}"
+    forge "net.neoforged:forge:${rootProject.minecraft_version}-${rootProject.forge_version}"
 
     sourceSets.main.java.srcDirs += "${project.rootDir}/Shared/src/main/java"
 	sourceSets.main.resources.srcDirs += "${project.rootDir}/Shared/src/main/resources"
