--- a/build.gradle
+++ b/build.gradle
@@ -5,45 +5,47 @@ plugins {
 }
 
 subprojects {
-	apply plugin: 'eclipse'
-	apply plugin: "dev.architectury.loom"
-	//apply plugin: "fabric-loom"
-	apply plugin: 'com.github.johnrengelman.shadow'
+	if (!project.name.toLowerCase().contains("versionless")) {
+		apply plugin: 'eclipse'
+		apply plugin: "dev.architectury.loom"
+		//apply plugin: "fabric-loom"
+		apply plugin: 'com.github.johnrengelman.shadow'
 
-	loom {
-		mixin {
-			defaultRefmapName = "$id$.refmap.mixins.json"
-		}
-		<accesswidener>
-        accessWidenerPath = file("../Shared/src/main/resources/$id$.accesswidener")
-		</accesswidener>
-	}
-
-	configurations {
-		inc
-		implementation.extendsFrom inc
-	}
-
-	shadowJar {
-		configurations = [project.configurations.inc]
-		relocate 'dev.tr7zw.util', '$relocationpackage$.util'
-		relocate 'dev.tr7zw.config', '$relocationpackage$.config'
-	}
-
-	remapJar {
-		dependsOn(shadowJar)
-		input = shadowJar.archiveFile
-	}
-
-	dependencies {
-		minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
-		mappings loom.layered() {
-			officialMojangMappings()
-			parchment("org.parchmentmc.data:parchment-${rootProject.parchment_mc_version}:${rootProject.parchment_version}@zip")
+		loom {
+			mixin {
+				defaultRefmapName = "$id$.refmap.mixins.json"
+			}
+			<accesswidener>
+			accessWidenerPath = file("../Shared/src/main/resources/$id$.accesswidener")
+			</accesswidener>
 		}
 
-		$dependencies$
+		configurations {
+			inc
+			implementation.extendsFrom inc
+		}
 
+		shadowJar {
+			configurations = [project.configurations.inc]
+			relocate 'dev.tr7zw.util', '$relocationpackage$.util'
+			relocate 'dev.tr7zw.config', '$relocationpackage$.config'
+		}
+
+		remapJar {
+			dependsOn(shadowJar)
+			input = shadowJar.archiveFile
+		}
+
+		dependencies {
+			minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
+			mappings loom.layered() {
+				officialMojangMappings()
+				parchment("org.parchmentmc.data:parchment-${rootProject.parchment_mc_version}:${rootProject.parchment_version}@zip")
+			}
+
+			$dependencies$
+
+		}
 	}
 }
 
