--- a/github/workflows/tag.yml
+++ b/github/workflows/tag.yml
@@ -83,6 +83,7 @@ $autoworkflowfiles$
   FabricRelease:
     if: inputs.target == 'fabric' || inputs.target == 'all'
     runs-on: ubuntu-latest
+    steps:
       - name: Publish-Fabric
         uses: Kir-Antipov/mc-publish@v3.2
         with:
