--- a/github/workflows/tag.yml
+++ b/github/workflows/tag.yml
@@ -34,6 +34,7 @@ jobs:
       - name: build
         run: ./gradlecw build
   GithubRelease:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Save Changelog
@@ -52,6 +53,7 @@ $autoworkflowfiles$
 <autopublish>
 <publishForge>
   ForgeRelease:
+    needs: GithubRelease
     if: inputs.target == 'forge' || inputs.target == 'all'
     runs-on: ubuntu-latest
     steps:
@@ -81,6 +83,7 @@ $autoworkflowfiles$
 </publishForge>
 <publishFabric>
   FabricRelease:
+    needs: GithubRelease
     if: inputs.target == 'fabric' || inputs.target == 'all'
     runs-on: ubuntu-latest
     steps:
