--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.jvmargs=-Xmx2G
 minecraft_version       = 1.20.2
 fabric_loader_version   = 0.14.22
 forge_version           = 48.0.1
+neoforged_version       = 20.2.20-beta
 parchment_mc_version    = 1.20.2
 parchment_version       = 2023.10.22
 
