--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Minecraft Properties
-minecraft_version       = 1.20.2
-fabric_loader_version   = 0.14.22
+minecraft_version       = 23w43a
+fabric_loader_version   = 0.14.24
 forge_version           = 48.0.1
 parchment_mc_version    = 1.20.2
 parchment_version       = 2023.10.22
@@ -16,5 +16,5 @@ modid                   = $id$
 author                  = $author$
 
 # Dependencies
-fabric_api_version      = 0.89.0+1.20.2
+fabric_api_version      = 0.90.5+1.20.3
 mod_menu_release        = sMAXpy0X
