--- a/Neo/build.gradle
+++ b/Neo/build.gradle
@@ -1,7 +1,7 @@
-archivesBaseName = rootProject.archives_base_name + "-forge"
+archivesBaseName = rootProject.archives_base_name + "-neoforge"
 
 dependencies {
-    forge "net.neoforged:neoforge:${rootProject.neoforged_version}"
+    neoForge "net.neoforged:neoforge:${rootProject.neoforge_version}"
 
     sourceSets.main.java.srcDirs += "${project.rootDir}/Shared/src/main/java"
 	sourceSets.main.resources.srcDirs += "${project.rootDir}/Shared/src/main/resources"
@@ -20,10 +20,6 @@ processResources {
     filesMatching("META-INF/mods.toml") {
         expand "version": project.version
     }
-}
-
-loom {
-    forge.mixinConfigs "${modid}.mixins.json"
 }
 
 jar {
