--- a/compose-template.yml
+++ b/compose-template.yml
@@ -4,6 +4,11 @@ defaultReplacements:
   licensename: "LICENSE"
   author: "tr7zw"
   group: "dev.tr7zw"
+  licenseName: "tr7zw Protective License"
+  description: "Allan, please add details!"
+  homepageUrl: "https://github.com/tr7zw"
+  sourcesUrl: "https://github.com/tr7zw"
+  issuesUrl: "https://github.com/tr7zw"
 customEntries:
   - UtilityCode/src/main/java/dev/tr7zw/config/CustomConfigScreen.java
   - UtilityCode/src/main/java/dev/tr7zw/util/ComponentProvider.java
