--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,17 @@ org.gradle.jvmargs=-Xmx2G
 
 # Minecraft Properties
 minecraft_version       = 1.20.2
+minecraft_version_range_forge = [1.20.2,1.21)
+minecraft_version_range_fabric = >=1.20.2
 fabric_loader_version   = 0.14.22
 forge_version           = 48.0.1
 neoforge_version       = 20.2.56-beta
+neo_version_range      = [20.2,)
+loader_version_range_neoforge = [1,)
+loader_version_range_forge = [28,)
 parchment_mc_version    = 1.20.2
 parchment_version       = 2023.10.22
+pack_format_number      = 18
 
 # Mod Properties
 mod_version 			= $version$
