Test adding lombok back in

--- a/Versionless/build.gradle
+++ b/Versionless/build.gradle
@@ -1,5 +1,12 @@
 archivesBaseName = rootProject.archives_base_name + "-versionless"
 
 dependencies {
+
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    
+    testCompileOnly 'org.projectlombok:lombok:1.18.30'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+
     $dependencies$
 }
