--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx2G
 
 # Minecraft Properties
 minecraft_version       = 1.20.2
-fabric_loader_version   = 0.14.22
-forge_version           = 48.0.1
+fabric_loader_version   = 0.14.25
+forge_version           = 48.0.42
 parchment_mc_version    = 1.20.2
 parchment_version       = 2023.10.22
 
@@ -16,5 +16,5 @@ modid                   = $id$
 author                  = $author$
 
 # Dependencies
-fabric_api_version      = 0.89.0+1.20.2
-mod_menu_release        = sMAXpy0X
+fabric_api_version      = 0.91.1+1.20.2
+mod_menu_release        = TwfjidT5
