--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ minecraft_version       = 1.20.2
 minecraft_version_range_forge = [1.20.2,1.21)
 minecraft_version_range_fabric = >=1.20.2
 fabric_loader_version   = 0.14.22
-forge_version           = 48.0.1
-neoforge_version       = 20.2.56-beta
+forge_version           = 48.1.0
+neoforge_version       = 20.2.86
 neo_version_range      = [20.2,)
 loader_version_range_neoforge = [1,)
 loader_version_range_forge = [28,)
