--- a/compose-template.yml
+++ b/compose-template.yml
@@ -9,6 +9,7 @@ defaultReplacements:
   homepageUrl: "https://github.com/tr7zw"
   sourcesUrl: "https://github.com/tr7zw"
   issuesUrl: "https://github.com/tr7zw"
+  targetVersions: "1.20.2"
 customEntries:
   - UtilityCode/src/main/java/dev/tr7zw/config/CustomConfigScreen.java
   - UtilityCode/src/main/java/dev/tr7zw/util/ComponentProvider.java
