--- a/gradle.properties
+++ b/gradle.properties
@@ -2,18 +2,18 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Minecraft Properties
-minecraft_version       = 1.20.2
-minecraft_version_range_forge = [1.20.2,1.21)
+minecraft_version       = 1.20.4
+minecraft_version_range_forge = [1.20.3,1.21)
 minecraft_version_range_fabric = >=1.20.2
-fabric_loader_version   = 0.14.25
-forge_version           = 48.1.0
-neoforge_version       = 20.2.86
+fabric_loader_version   = 0.15.1
+forge_version           = 49.0.3
+neoforge_version       = 20.4.10-beta
 neo_version_range      = [20.2,)
 loader_version_range_neoforge = [1,)
 loader_version_range_forge = [28,)
 parchment_mc_version    = 1.20.2
 parchment_version       = 2023.10.22
-pack_format_number      = 18
+pack_format_number      = 22
 
 # Mod Properties
 mod_version 			= $version$
@@ -23,5 +23,5 @@ modid                   = $id$
 author                  = $author$
 
 # Dependencies
-fabric_api_version      = 0.91.1+1.20.2
-mod_menu_release        = TwfjidT5
+fabric_api_version      = 0.91.2+1.20.4
+mod_menu_release        = 4EYB2Bxx
