Hack Forge support back in for 1.20.4

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -30,3 +30,9 @@ jar {
         ])
     }
 }
+
+sourceSets.each {
+    def dir = layout.buildDirectory.dir("sourcesSets/$it.name")
+    it.output.resourcesDir = dir
+    it.java.destinationDirectory = dir
+}
