--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,8 @@ minecraft_version_range_forge = [1.20.2,1.21)
 minecraft_version_range_fabric = >=1.20.2
 fabric_loader_version   = 0.14.25
 forge_version           = 48.1.0
-neoforge_version       = 20.2.86
+# Version used by CurseForge, doesn't yet include the icon crash like the latest version does.
+neoforge_version       = 20.2.64-beta
 neo_version_range      = [20.2,)
 loader_version_range_neoforge = [1,)
 loader_version_range_forge = [28,)
